[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/MainScreens/Accounts.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/MainScreens/Elements/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/MainScreens/Accounts/AccountPanel.tscn" type="PackedScene" id=4]

[node name="Accounts" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="Back" parent="." index="1" instance=ExtResource( 3 )]

[node name="AccountPanel1" parent="." index="2" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Layer2" parent="AccountPanel1" index="1"]

editor/display_folded = true

[node name="AccountPanel2" parent="." index="3" instance=ExtResource( 4 )]

editor/display_folded = true
margin_left = 672.0
margin_right = 1216.0

[node name="AccountPanel3" parent="." index="4" instance=ExtResource( 4 )]

editor/display_folded = true
margin_top = 352.0
margin_bottom = 576.0

[node name="AccountPanel4" parent="." index="5" instance=ExtResource( 4 )]

editor/display_folded = true
margin_left = 672.0
margin_top = 352.0
margin_right = 1216.0
margin_bottom = 576.0

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="AccountPanel1/Layer1/Create" to="." method="_on_Create_pressed1"]

[connection signal="pressed" from="AccountPanel2/Layer1/Create" to="." method="_on_Create_pressed2"]

[connection signal="pressed" from="AccountPanel3/Layer1/Create" to="." method="_on_Create_pressed3"]

[connection signal="pressed" from="AccountPanel4/Layer1/Create" to="." method="_on_Create_pressed4"]


[editable path="AccountPanel1"]
[editable path="AccountPanel2"]
[editable path="AccountPanel3"]
[editable path="AccountPanel4"]
